--- a/pokemon-core/build.gradle
+++ b/pokemon-core/build.gradle
@@ -20,8 +20,18 @@ repositories {
 }
 
 dependencies {
-    compileOnly 'org.projectlombok:lombok'
-    annotationProcessor 'org.projectlombok:lombok'
+    // Lombok
+    compileOnly('org.projectlombok:lombok:1.18.22')
+    annotationProcessor('org.projectlombok:lombok:1.18.22')
+    testCompileOnly('org.projectlombok:lombok:1.18.22')
+    testAnnotationProcessor('org.projectlombok:lombok:1.18.22')
+
+    // Unit Test
+    testImplementation('org.junit.jupiter:junit-jupiter:5.9.2')
+    testImplementation("org.hamcrest:hamcrest-all:1.3")
+    // Mockito
+    testImplementation("com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0")
+
 }
 
 tasks.named('test') {
