pathsを指定した。

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,9 +4,11 @@ name: Build
 # どういったイベントが発生したときにワークフローを実行するかを指定。
 on:
   # ここでは変更がpushされたときをイベントとして指定。
-  - push
+  push:
+    paths:
+      - 'pokemon-core/**'
 
-# ワークフローが実行するジョブの一覧
+      # ワークフローが実行するジョブの一覧
 jobs:
   # ビルドを行うジョブ
   build:
