--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -9,9 +9,11 @@ name: Java CI with Gradle
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "feature/**" ]
+    paths:
+      - 'pokemon-core/**'
   pull_request:
-    branches: [ "feature/**" ]
+    branches: [ "main" ]
 
 permissions:
   contents: read
