--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -9,11 +9,12 @@ name: Java CI with Gradle
 
 on:
   push:
-    branches: [ "**" ]
-    paths:
-      - 'pokemon-core/**'
+    branches:
+      - '**'
+
   pull_request:
-    branches: [ "**" ]
+    branches:
+      - '**'
 
 permissions:
   contents: read
