--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -25,14 +25,17 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+        with:
+          repository: pokemon/pokemon-core
+          path: pokemon-core
       - uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'temurin'
       - name: Validate Gradle wrapper
-        uses: pokemon-core/gradle/wrapper-validation-action@ccb4328a959376b642e027874838f60f8e596de3
+        uses: gradle/wrapper-validation-action@ccb4328a959376b642e027874838f60f8e596de3
       - name: Build with Gradle
-        uses: pokemon-core/gradle/gradle-build-action@749f47bda3e44aa060e82d7b3ef7e40d953bd629
+        uses: gradle/gradle-build-action@749f47bda3e44aa060e82d7b3ef7e40d953bd629
         with:
           arguments: build
       - uses: actions/upload-artifact@v3
