--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -28,6 +28,7 @@ jobs:
         with:
           repository: pokemon/pokemon-core
           path: pokemon-core
+          branch: "**"
       - uses: actions/setup-java@v3
         with:
           java-version: '17'
