--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -27,7 +27,8 @@ jobs:
       - uses: actions/checkout@v4
         with:
           repository: pokemon/pokemon-core
-          branch: repository
+          path: pokemon-core
+          token: ${{ secrets.GITHUB_TOKEN }}
       - uses: actions/setup-java@v3
         with:
           java-version: '17'
