--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -29,7 +29,7 @@ jobs:
           repository: pokemon/pokemon-core
           path: pokemon-core
           token: ${{ secrets.GITHUB_TOKEN }}
-          branch: path
+          branch: ${{ github.event.repository.default_branch }}
       - uses: actions/setup-java@v3
         with:
           java-version: '17'
