--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -26,7 +26,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          repository: pokemon
+          repository: Ryo-Kgym/pokemon
           path: pokemon-core
           branch: ${{ github.event.repository.default_branch }}
       - uses: actions/setup-java@v3
