--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -33,7 +33,7 @@ jobs:
         uses: gradle/wrapper-validation-action@ccb4328a959376b642e027874838f60f8e596de3
       - name: Build with Gradle
         uses: gradle/gradle-build-action@749f47bda3e44aa060e82d7b3ef7e40d953bd629
-      - run: cd ./pokemon-core && sh ./gradlew build
+        run: cd ./pokemon-core && sh ./gradlew build
       - uses: actions/upload-artifact@v3
         with:
           name: Package
