Feature/build test (#2)
* pathsを指定した。

* branchesを指定した。

* gradleに変更

* 設定変更

* 設定変更

* pathsにcoreを追加

* パスを変更

* パスを変更

* パスを変更

* branch設定

* branchを設定した。

* branchを設定した。

* pathを削除した。

* branchを指定

* branchを指定

* path, token

* branch

* branch

* version

* token

* repository

* repository

* repository

* path

* path

* cd

* run

* directory

* run

* run

* run

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -11,9 +11,6 @@ on:
   push:
     branches:
       - '**'
-    paths:
-      - "/pokemon-core"
-
   pull_request:
     branches:
       - '**'
@@ -35,9 +32,7 @@ jobs:
       - name: Validate Gradle wrapper
         uses: gradle/wrapper-validation-action@ccb4328a959376b642e027874838f60f8e596de3
       - name: Build with Gradle
-        uses: gradle/gradle-build-action@749f47bda3e44aa060e82d7b3ef7e40d953bd629
-        with:
-          arguments: build
+        run: cd ./pokemon-core && sh ./gradlew build
       - uses: actions/upload-artifact@v3
         with:
           name: Package
